# guardroute

./: .env.example  README.md  agent.md  api.py  guardroute.md  pyproject.toml  setup.py
src/: main.py  orchestrator.py
src/agents/: classifier.py  coding.py  guardrails.py  search.py
src/core/: config.py  graph_parser.py
src/database/: models.py
src/nodes/: __init__.py  api_call_executor.py  conditional_evaluator.py  eval_executor.py  mcp_tool_executor.py  router_executor.py  ssrf_protection.py  transform_executor.py  webhook_executor.py
tests/: conftest.py  test_api_call_executor.py  test_conditional_evaluator.py  test_eval_executor.py  test_graph_parser_v5.py  test_mcp_tool_executor.py  test_router_executor.py  test_transform_executor.py  test_webhook_executor.py
tests/unit/: test_agents.py  test_main.py  test_security.py
