[tool.poetry]
name = "guardroute"
version = "0.1.0"
description = "Contract-Aware AI Gateway & MLOps Control Plane"
authors = ["AI Developer Agent <agent@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
uvicorn = "^0.30.0"
python-dotenv = "^1.0.1"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
qdrant-client = "^1.9.0"
llama-cpp-python = { version = "^0.2.76", source = "llama-cpp-cpu" }
docling = "^2.0.0"
pypdf = "^4.2.0"
scikit-learn = "^1.5.0"
evidently = "^0.4.24"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"
deepeval = "^4.0.5"
ragas = "^0.1.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "llama-cpp-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
priority = "explicit"
